# agent-intake-lint

./: .agent-intake-lint.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  rule_request.md
.github/workflows/: ci.yml
examples/: bad-intake.md  good-intake.md  team-config.json
src/agent_intake_lint/: __init__.py  cli.py  config.py  reporting.py  validator.py
tests/: test_cli.py  test_validator.py
