[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-intake-lint"
version = "0.1.0"
description = "Validate Markdown handoff notes for agent shared-memory systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrew Cronk" }]
keywords = ["agents", "markdown", "lint", "handoff", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
agent-intake-lint = "agent_intake_lint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
